<resources>
    <string name="app_name">Translator</string>
    <string name="translator">TRANSLATOR</string>
    <string name="eng_rus"><![CDATA[eng -> rus]]></string>
    <string name="rus_eng"><![CDATA[rus -> eng]]></string>
    <string name="word">word</string>
    <string name="translate">Translate</string>
    <string name="no_text">Please, enter the text</string>
    <string name="tranlate_to_rus">%1$s%2$s перевод</string>
    <string name="translate_to_eng">%1$s%2$s перевод на английский</string>
</resources>